--- a/Assets/Augmented Life Studio LLC/metapro for Unity/Editor/AppSetupStyles.uss
+++ b/Assets/Augmented Life Studio LLC/metapro for Unity/Editor/AppSetupStyles.uss
@@ -103,6 +103,20 @@
     color: #7763f6;
     font-size: 13px;
     -unity-font-style: bold;
+    background-color: rgba(255,255,255,0);
+    border-color: rgba(255,255,255,0);
+    border-width: 0;
+}
+
+#paste_input > .unity-button {
+    background-color: rgba(255,255,255,0);
+    border-color: rgba(255,255,255,0);
+    border-width: 0;
+}
+#paste_input > .unity-text-element {
+    background-color: rgba(255,255,255,0);
+    border-color: rgba(255,255,255,0);
+    border-width: 0;
 }
 
 #paste_nput:hover {
