--- a/Assets/Augmented Life Studio LLC/metapro for Unity/Editor/AppSetupStyles.uss
+++ b/Assets/Augmented Life Studio LLC/metapro for Unity/Editor/AppSetupStyles.uss
@@ -123,11 +123,64 @@
     color: #8978f7;
 }
 
+#text_second {
+    /*font-family: "BiennaleBold", sans-serif;*/
+    font-size: 20px;
+    -unity-font-style: bold;
+    color: #fff;
+    margin-top: 20px;
+}
+
+#styled_dropdown {
+    width: 100%;
+    height: 45px;
+    border-radius: 8px;
+    border-color: #3a527e;
+    border-width: 0px;
+    background-color: #101723;
+    color: #a2b3cd;
+    font-size: 16px;
+
+    margin-top: 5px;
+    /*outline: none !important;*/
+}
+
+#styled_dropdown > .unity-base-field__input {
+    width: 100%;
+    height: 43px;
+    border-radius: 8px;
+    border-color: #3a527e;
+    border-width: 1px;
+    background-color: #101723;
+    color: #a2b3cd;
+    font-size: 16px;
+    /*outline: none !important;*/
+}
+
+#styled_dropdown > .unity-base-field__input > .unity-base-popup-field__text
+{
+    width: 100%;
+    height: 43px;
+    border-radius: 8px;
+    border-color: #3a527e;
+    border-width: 0px;
+    background-color: #101723;
+    color: #a2b3cd;
+    padding: 8px 12px;
+    font-size: 16px;
+}
+#styled_dropdown > .unity-base-field__input > .unity-base-popup-field__arrow
+{
+    width: 0px;
+    height: 0px;
+}
+
 
 #button_box {
     padding-top: 24px;
     width: 100%;
     height: auto;
+    background-color: #101723;
 }
 
 #button {
